--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node --watch Clases/2daClase_nuevas_funcionalidades_js/app.js"
+    "start": "node --watch Desafios/desafio_1/app.js"
   },
   "keywords": [],
   "author": "",
