--- a/Desafios/desafio_3/package.json
+++ b/Desafios/desafio_3/package.json
@@ -1,7 +1,6 @@
 {
   "name": "backend-53150",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node --watch Desafios/desafio_3/src/app.js"
@@ -10,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.19.2"
-  }
+  },
+  "description": ""
 }
