--- a/Desafios/desafio_3/package.json
+++ b/Desafios/desafio_3/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node --watch Desafios/desafio_3/src/app.js"
+    "start": "node --watch src/app.js"
   },
   "keywords": [],
   "author": "",
