--- a/Clases/9naClase_motores_de_plantillas_handlebars/package.json
+++ b/Clases/9naClase_motores_de_plantillas_handlebars/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "backend-53150",
+  "name": "handlebars",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "node --watch Desafioss/desafio_4/src/app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "handlebars": "^4.7.8",
-    "multer": "^1.4.5-lts.1",
-    "socket.io": "^4.7.5"
+    "express-handlebars": "^7.1.2",
+    "handlebars": "^4.7.8"
   }
 }
