--- a/Desafios/desafio_4/package.json
+++ b/Desafios/desafio_4/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node --watch Desafioss/desafio_4/src/app.js"
+    "start": "node --watch src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-handlebars": "^7.1.2",
     "handlebars": "^4.7.8",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.5"
