--- a/Desafios/desafio_4/package.json
+++ b/Desafios/desafio_4/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "backend-53150",
+  "name": "desafio_4",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node --watch src/app.js"
   },
@@ -10,11 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
-    "handlebars": "^4.7.8",
-    "multer": "^1.4.5-lts.1",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "sweetalert2": "^11.10.8"
   }
 }
